--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang=""en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Addini Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <nav>
+        <div class="logo-icon"</div>
+        <a href="https://revou.co/" target="_blank">
+        <img src="https://s3-ap-southeast-1.amazonaws.com/revou-blog/2019/12/Logo-RevoU-5.png"
+        alt = RevoU" width="50">
+        </a>
 
+    <section>
+        <a class="nav-item">Home</a>
+        <a class="nav-item">Our Profile</a>
+        <a class="nav-item">Message Us</a>
+    </section>
+    </nav>
 </body>
 
 </html>
